--- a/CSS/style.css
+++ b/CSS/style.css
@@ -14,7 +14,7 @@ h2 {
     background-color: #C58940;
 }
 
-.nav {
+.navi {
     color: red;
     display: inline-block;
     padding-left: 10px;
@@ -27,6 +27,23 @@ body {
 p {
     color: red;
 }
+
+/*Home page CSS */
+.flex-container{
+    display: flex;
+    left: 40%;
+    align-items: center;
+    height: 500px;
+    position: absolute;
+}
+li {
+    display: inline-block;
+    
+}
+#primary-menu {
+    text-decoration: none;
+}
+
 
 
 
@@ -101,10 +118,4 @@ list-style-position: inside;
 font-size: 20px
 text-align: center
 }*/
-
-
-
-
-
-
 
