--- a/CSS/style2.css
+++ b/CSS/style2.css
@@ -65,7 +65,7 @@ li{
 
 .header {
     position: relative;
-    font-family: myFirstFont, 'UKIJ Tuz';
+    font-family: 'UKIJ Tuz';
     background-color: #FFFFFF;
     
 }
